# PLASMA

./: CMakeLists.txt  Makefile  Makefile.internal  Makefile.tau  README  ReleaseNotes  make.inc.example
compute/: Makefile  Makefile.src  cgeadd.c  cgebrd.c  cgecfi.c  cgecfi2.c  cgecfi2.h  cgecon.c  cgelqf.c  cgelqs.c  cgels.c  cgemm.c  cgeqp3.c  cgeqrf.c  cgeqrs.c  cgesdd.c  cgesv.c  cgesv_incpiv.c  cgesvd.c  cgetmi.c  cgetrf.c  cgetrf_incpiv.c  cgetrf_nopiv.c  cgetrf_tntpiv.c  cgetri.c  cgetrs.c  cgetrs_incpiv.c  cheev.c  cheevd.c  cheevr.c  chegst.c  chegv.c  chegvd.c  chemm.c  cher2k.c  cherk.c  chetrd.c  clacpy.c  clange.c  clanhe.c  (+508 more)
control/: Makefile  allocate.c  allocate.h  async.c  async.h  auxiliary.c  auxiliary.h  bulge.h  common.h  compute_c.h  compute_d.h  compute_s.h  compute_z.h  context.c  context.h  control.c  control.h  core_blas_dag.h  ctile.c  descriptor.c  dtile.c  global.h  pctile.c  pdtile.c  plasma_cf77.c  plasma_cf90.F90  plasma_cf90_wrappers.F90  plasma_df77.c  plasma_df90.F90  plasma_df90_wrappers.F90  plasma_dsf90.F90  plasma_f77.c  plasma_f90.f90  plasma_mf77.c  plasma_sf77.c  plasma_sf90.F90  plasma_sf90_wrappers.F90  plasma_threadsetting.c  plasma_threadsetting.h  plasma_timing.h  (+20 more)
core_blas/: Makefile  Makefile.src  core_cbrdalg1.c  core_cgbelr.c  core_cgblrx.c  core_cgbrce.c  core_cgbtype1cb.c  core_cgbtype2cb.c  core_cgbtype3cb.c  core_cgeadd.c  core_cgelqt.c  core_cgemm.c  core_cgemv.c  core_cgeqp3_init.c  core_cgeqp3_larfg.c  core_cgeqp3_norms.c  core_cgeqp3_pivot.c  core_cgeqp3_tntpiv.c  core_cgeqp3_update.c  core_cgeqrt.c  core_cgessm.c  core_cgessq.c  core_cgetf2_nopiv.c  core_cgetrf.c  core_cgetrf_incpiv.c  core_cgetrf_nopiv.c  core_cgetrf_reclap.c  core_cgetrf_rectil.c  core_cgetrip.c  core_chbelr.c  core_chblrx.c  core_chbrce.c  core_chbtype1cb.c  core_chbtype2cb.c  core_chbtype3cb.c  core_chegst.c  core_chemm.c  core_cher2k.c  core_cherfb.c  core_cherk.c  (+386 more)
core_blas-eztrace/: Makefile  Makefile.src  coreblas.c  coreblas_c.c  coreblas_d.c  coreblas_ev_codes.h  coreblas_macros.h  coreblas_s.c  coreblas_z.c  eztrace_convert_coreblas.c  qwrapper_z.c
core_blas-qwrapper/: Makefile  Makefile.src  qwrapper_alloc.c  qwrapper_cbrdalg1.c  qwrapper_cgeadd.c  qwrapper_cgelqt.c  qwrapper_cgemm.c  qwrapper_cgemm_tile.c  qwrapper_cgemv.c  qwrapper_cgemv_tile.c  qwrapper_cgeqp3_init.c  qwrapper_cgeqp3_larfg.c  qwrapper_cgeqp3_norms.c  qwrapper_cgeqp3_pivot.c  qwrapper_cgeqp3_tntpiv.c  qwrapper_cgeqp3_update.c  qwrapper_cgeqrt.c  qwrapper_cgessm.c  qwrapper_cgessq.c  qwrapper_cgetrf.c  qwrapper_cgetrf_incpiv.c  qwrapper_cgetrf_nopiv.c  qwrapper_cgetrf_reclap.c  qwrapper_cgetrf_rectil.c  qwrapper_cgetrip.c  qwrapper_chegst.c  qwrapper_chemm.c  qwrapper_cher2k.c  qwrapper_cherfb.c  qwrapper_cherk.c  qwrapper_chessq.c  qwrapper_clacpy.c  qwrapper_clacpy_pivot.c  qwrapper_clange.c  qwrapper_clanhe.c  qwrapper_clansy.c  qwrapper_clantr.c  qwrapper_clascal.c  qwrapper_clascl.c  qwrapper_claset.c  (+334 more)
examples/: Makefile  Makefile.src  example_cgelqf.c  example_cgelqs.c  example_cgels.c  example_cgels_f.f  example_cgeqrf.c  example_cgeqrf_tile_f90.f90  example_cgeqrs.c  example_cgesv.c  example_cgesv_f.f  example_cgetrs.c  example_cposv.c  example_cposv_f.f  example_cposv_tile_f.f  example_cpotrf.c  example_cpotrs.c  example_ctrsm.c  example_ctrsmpl.c  example_cunmlq.c  example_cunmqr.c  example_dgelqf.c  example_dgelqs.c  example_dgels.c  example_dgels_f.f  example_dgeqrf.c  example_dgeqrs.c  example_dgesv_f.f  example_dgesv_tile_async_f90.f90  example_dgetrs.c  example_dormlq.c  example_dormqr.c  example_dposv.c  example_dposv_f.f  example_dposv_tile_f.f  example_dpotrf.c  example_dpotrf_gpu.c  example_dpotrs.c  example_dtrsm.c  example_dtrsmpl.c  (+36 more)
include/: cblas.h  core_blas.h  core_cblas.h  core_zblas.h  core_zcblas.h  plasma.h  plasma_c.h  plasma_d.h  plasma_ds.h  plasma_s.h  plasma_z.h  plasma_zc.h  plasmaf.h
lib/pkgconfig/: coreblas.pc.in  plasma.pc.in
makes/: make.inc.gcc.acml  make.inc.gcc.atlas  make.inc.gcc.goto  make.inc.gcc.goto2  make.inc.gcc.mkl_x86  make.inc.gcc.mkl_x86_64  make.inc.gcc.refblas  make.inc.gcc.veclib  make.inc.intel  make.inc.intel.acml  make.inc.intel.atlas  make.inc.intel.goto  make.inc.intel.goto2  make.inc.intel.refblas  make.inc.mac
quark/: Makefile  eztrace_convert_quark.c  quark.c  quark.h  quark_trace.h
testing/: Makefile  ZHEEVDG_test.sh  testing_dmain.h
testing/lin/: Makefile
